<resources>
    <string name="app_name">guardian news</string>
    <string name="story_image_thumbnail">story image thumbnail</string>
    <string name="story_headline_demo">Brexit is a disaster\' &#8211;  experts debate the latest economic data</string>
    <string name="trial_text_demo">Two former members of Bank of England’s interest rate-setting committee examine why UK growth lags its EU rivals</string>
    <string name="not_defined">NOT DEFINED</string>
    <string name="no_internet_connection">No Internet Connection!</string>
    <string name="no_stories">No stories to be shown.</string>
    <string name="about">About</string>
    <string name="back">Back</string>
    <string name="more">More</string>
    <string name="this_app_was">This App was created by\nWISEMO\nOne of the Google | Udacity Developer schoolarship winners\n2017&#8211;2018</string>
    <string name="google_udacity_logos" translatable="false">google_udacity_logos</string>

    <string name="settings_menu_item">Settings</string>
    <string name="settings_title">Story Settings</string>
    <string name="settings">Settings</string>

    <string name="settings_view_by_label">View By</string>
    <string name="settings_view_by_key" translatable="false">politics/politics</string>
    <string name="settings_view_by_default" translatable="false">@string/settings_view_by_label</string>

    <string name="business_label">business</string>
    <string name="business_value" translatable="false">business</string>
    <string name="ukNews_label">UK News</string>
    <string name="ukNews_value" translatable="false">UK News</string>
    <string name="politics_label">Politics</string>
    <string name="politics_value" translatable="false">Politics</string>
    <string name="news_label">News</string>
    <string name="news_value" translatable="false">News</string>
    <string name="opinion_label">Opinion</string>
    <string name="opinion_value" translatable="false">Opinion</string>
    <string name="education_label">Education</string>
    <string name="education_value" translatable="false">Education</string>
    <string name="media_label">Media</string>
    <string name="media_value" translatable="false">Media</string>
    <string name="worldNews_label">World News</string>
    <string name="worldNews_value" translatable="false">World News</string>
    <string name="science_label">Science</string>
    <string name="science_value" translatable="false">Science</string>
    <string name="globalDevelopment_label">Global Development</string>
    <string name="globalDevelopment_value" translatable="false">Global Development</string>
    <string name="higherEducationNetwork_label">Higher Education Network</string>
    <string name="higherEducationNetwork_value" translatable="false">Higher Education Network</string>

</resources>
