<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_blue_gradient"
            android:layout_gravity="center"
            android:orientation="vertical">
            <!-- Google | Udacity logos -->
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:contentDescription="@string/google_udacity_logos"
                android:src="@drawable/goud_logo" />
            <!-- line -->
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/white" />
            <!-- About txt -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="20dp"
                android:drawablePadding="15dp"
                android:drawableTop="@drawable/mo"
                android:gravity="center"
                android:lineSpacingMultiplier="1.3"
                android:text="@string/this_app_was"
                android:textColor="@android:color/white"
                android:textSize="16sp"
                app:fontFamily="@font/futura_std_book" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="30dp"
                android:orientation="horizontal">
                <!-- More btn -->
                <Button
                    android:id="@+id/in_connect_btn"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginEnd="20dp"
                    android:layout_marginRight="20dp"
                    android:background="@drawable/round_bkg_dark"
                    android:padding="20dp"
                    android:text="@string/more"
                    android:textColor="@android:color/white" />
                <!-- Back btn -->
                <Button
                    android:id="@+id/about_back_btn"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@drawable/round_bkg_dark"
                    android:padding="20dp"
                    android:text="@string/back"
                    android:textColor="@android:color/white" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>